--- a/.bit/responses/3.6-Week 3 Step 6.md
+++ b/.bit/responses/3.6-Week 3 Step 6.md
@@ -14,7 +14,8 @@ Week 3 Step 6 ⬤⬤⬤⬤⬤⬤◯◯◯ | 🕐 Estimated completion: 10-20 min
 
 ## ✅  Task:
 
-- [ ]  1. Create an HTTP Trigger Azure Function and add its URL to a repository secret named `DEEPSECRETS_ENDPOINT`
+- [ ] Create a new branch named `deepsecrets`
+- [ ]    1. Create an HTTP Trigger Azure Function and add its URL to a repository secret named `DEEPSECRETS_ENDPOINT`
 - [ ]  2. Fill in the Azure Function URL as a webhook
 - [ ] 3. Code the Function so that it returns the message it was sent
 - [ ]  Test your function by texting your Twilio number and seeing output texted back to yourself.
@@ -36,10 +37,12 @@ See your [phone numbers](https://www.twilio.com/console/phone-numbers/incoming).
 <summary>❗ Example output?</summary>
 
 ![194569969_1687986154736022_4227041675617722938_n](https://user-images.githubusercontent.com/49426183/120210870-1e99ce80-c1e5-11eb-9619-3a812f6206a7.jpg)
-
+   > Note: You might not get a text back on your phone because Twilio sometimes won't allow you to return a single variable as the entire body, but as long as the code passes the test, you will be okay!
+   
 </details>
 
 > 💡 Yay! This means you've successfully configured your Twilio webhook.
+
 
 ## Set Up a Twilio Account
 Since you should already have a trial Twilio Account from Week 2, you will only need to reconfigure the webhook URL. **You will use the same phone number as before.**
@@ -130,5 +133,6 @@ context.res = {
    body: queryObject.Body
 };
 ```
+> Since we are returning `queryObject.Body` as the entire body, you might not receive a text back on your phone. This is Twilio's issue, but the counselor bot's test should pass fine if your code is correct still!
 
 </details>
